unpackaged/main/default/objects/UTC__c/UTC__c.object-meta.xml
<CustomObject>
    <description>UTC response file from Aetna</description>
    <label>UTC</label>
    <nameField>
        <label>UTC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UTCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>