unpackaged/main/default/objects/UTC__c/fields/A1A_Indicator__c.field-meta.xml
<CustomField>
    <fullName>A1A_Indicator__c</fullName>
    <label>A1A Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>