unpackaged/main/default/objects/UTC__c/fields/Billing_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Name__c</fullName>
    <label>Billing Provider Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>