unpackaged/main/default/objects/UTC__c/fields/Billing_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Phone__c</fullName>
    <label>Billing Provider Phone</label>
    <type>Phone</type>
</CustomField>