unpackaged/main/default/objects/UTC__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>UTCs</relationshipLabel>
    <relationshipName>UTCs</relationshipName>
    <type>Lookup</type>
</CustomField>