unpackaged/main/default/objects/UTC__c/fields/Latest_PRx_Outreach_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Latest_PRx_Outreach_Attempt__c</fullName>
    <description>Last unsuccessful outreach date to the member. Format mm/dd/yyyy.</description>
    <inlineHelpText>Select the date of the latest telephonic outreach PRx made to either the MBR or HCP.</inlineHelpText>
    <label>Latest PRx Outreach Attempt</label>
    <type>Date</type>
</CustomField>