unpackaged/main/default/objects/UTC__c/fields/Outreach_Comments__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Comments__c</fullName>
    <label>Outreach Comments</label>
    <type>TextArea</type>
</CustomField>