unpackaged/main/default/objects/UTC__c/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <description>Select who Aetna needs to make an outbound telephonic outreach to.</description>
    <inlineHelpText>Select who Aetna needs to make an outbound telephonic outreach to.</inlineHelpText>
    <label>Outreach Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>