unpackaged/main/default/objects/UTC__c/fields/Patient_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birth_Date__c</fullName>
    <description>Patient Member Birth Date</description>
    <label>Patient Birth Date</label>
    <type>Date</type>
</CustomField>