unpackaged/main/default/objects/UTC__c/fields/Patient_CUMB_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_CUMB_ID__c</fullName>
    <description>The customer member number assigned to the subscriber.</description>
    <label>Patient CUMB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>