unpackaged/main/default/objects/UTC__c/fields/Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name__c</fullName>
    <description>Patient Member Last Name</description>
    <label>Patient Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>