unpackaged/main/default/objects/UTC__c/fields/Patient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone_Number__c</fullName>
    <description>Patient Member Phone Number</description>
    <label>Patient Phone Number</label>
    <type>Phone</type>
</CustomField>