unpackaged/main/default/objects/UTC__c/fields/PRx_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PRx_Indicator__c</fullName>
    <label>PRx Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>