unpackaged/main/default/objects/UTC__c/fields/PSU_ID__c.field-meta.xml
<CustomField>
    <fullName>PSU_ID__c</fullName>
    <label>PSU ID</label>
    <type>TextArea</type>
</CustomField>