unpackaged/main/default/objects/UTC__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <label>Service Provider Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>